--- a/src/view/tms.fxml
+++ b/src/view/tms.fxml
@@ -16,31 +16,35 @@
   
     <TableView fx:id="reportsTv" items="${controller.reports}" >
         <columns>
-            <TableColumn text="Name" prefWidth="115.5" fx:id="name">
+            <TableColumn text="Name" prefWidth="115.3">
                 <cellValueFactory>
                     <PropertyValueFactory property="name" />
                 </cellValueFactory>
             </TableColumn>
-             <TableColumn text="Tuition" prefWidth="115.5">
+             <TableColumn text="Tuition" prefWidth="115.3" fx:id="tuitionClm">
              <cellValueFactory>
                     <PropertyValueFactory property="totalFee" />
                 </cellValueFactory>
              </TableColumn>
-              <TableColumn text="Scholarship" prefWidth="115.5">
+             
+              <TableColumn text="Scholarship" prefWidth="115.3" fx:id="scholarshipClm">
                   <cellValueFactory>
                     <PropertyValueFactory property="scholarship" />
                 </cellValueFactory>
               </TableColumn>
-                <TableColumn text="Deduction" prefWidth="115.5">
+              
+                <TableColumn text="Deduction" prefWidth="115.3" fx:id="deductionClm">
                   <cellValueFactory>
                     <PropertyValueFactory property="deduction" />
                 </cellValueFactory>
               </TableColumn>
-                <TableColumn text="NetFee" prefWidth="115.5">
+              
+                <TableColumn text="NetFee" prefWidth="115.3" fx:id="netfeeClm">
                   <cellValueFactory>
                     <PropertyValueFactory property="netFee" />
                 </cellValueFactory>
               </TableColumn>
+              
         </columns>
     </TableView>
     <Separator/>
@@ -49,26 +53,26 @@
         <Insets top="10" bottom="10" left="10" right="10" />
     </padding>
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="30.0" percentWidth="19.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="20.0" percentWidth="19.0" prefWidth="20.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="30.0" percentWidth="19.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="20.0" percentWidth="19.0" prefWidth="20.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="25.0" percentWidth="25.0" prefWidth="25.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="20.0" percentWidth="20.0" prefWidth="20.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="29.0" percentWidth="29.0" prefWidth="29.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="17.0" percentWidth="17.0" prefWidth="17.0" />
     </columnConstraints>
     
     
-      <Text text="Total Tuition:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-      <Text text="Total NetFee:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-      <Text text="Total BAS:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+      <Label text="Total Tuition:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+      <Label text="Total NetFee:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+      <Label text="Total BAS:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
       
-      <Text styleClass="text-out" text= "${'$' + controller.tms.totalTuitionFee + '0'}" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-      <Text styleClass="text-out" text="${'$' + controller.tms.totalNetFee + '0'}" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-      <Text styleClass="text-out" text="${'$' + controller.tms.bas + '0'}" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+      <Text styleClass="text-out"  fx:id="totalTuitonFeeTxt" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+      <Text styleClass="text-out" fx:id="totalNetFeeTxt" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+      <Text styleClass="text-out" fx:id="basTxt" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
       
-       <Text text="Total Scholarship:" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-      <Text text="Total Deduction:" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
+       <Label text="Total Scholarship:" GridPane.columnIndex="2" GridPane.rowIndex="1"/>
+      <Label text="Total Deduction:" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
  
-      <Text styleClass="text-out" text="${'$'+ controller.tms.totalScholarship + '0'}" GridPane.columnIndex="3" GridPane.rowIndex="1"/>
-      <Text styleClass="text-out" text="${'$' + controller.tms.totalDeduction + '0'}" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
+      <Text styleClass="text-out" fx:id="totalScholarshipTxt"  GridPane.columnIndex="3" GridPane.rowIndex="1"/>
+      <Text styleClass="text-out" fx:id="totalDeductionTxt" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
    
 </GridPane>
   <Separator/>
