--- a/src/view/student.fxml
+++ b/src/view/student.fxml
@@ -21,33 +21,26 @@
     
    <VBox styleClass="header" alignment="CENTER">
        
-              
-          <VBox alignment="CENTER"  >
-        <Label text="Personal Details" styleClass="label-h2" >
-        </Label>
-            <padding >
-                <Insets  right="130"/>
-            </padding>
-       </VBox>
     
  <GridPane styleClass="header"  alignment="CENTER" hgap="5" vgap="5" >
      
        <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="50" percentWidth="25.0" prefWidth="50" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="100" percentWidth="45.0" prefWidth="150" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="24.0" percentWidth="25.0" prefWidth="25.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="45.0" percentWidth="45.0" prefWidth="45.0" />
     </columnConstraints>
+    
+    <VBox GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="2">
+      <Label text="Personal Details" styleClass="label-h2"   />
+     </VBox>
      
-          
-
-     
-        <Label text="Name:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="nameTF"/>
-       <Label text="Email:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="emailTF"/>
-      <Label text="Phone:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="phoneTF"/>
-      <Label text="Address:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="addressTF"/>
+        <Label text="Name:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="nameTF"/>
+       <Label text="Email:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="emailTF"/>
+      <Label text="Phone:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="phoneTF"/>
+      <Label text="Address:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="addressTF"/>
      
        
    </GridPane>
@@ -56,32 +49,29 @@
   <Separator />
     
     <VBox styleClass="header" alignment="CENTER">
-            
-          <VBox alignment="CENTER"  >
-        <Label text="Tuition Details" styleClass="label-h2" >
-        </Label>
-            <padding >
-                <Insets  right="150"/>
-            </padding>
-       </VBox>
+    
 
      <GridPane styleClass="header"  alignment="CENTER" hgap="5" vgap="5">
          
            <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="50" percentWidth="25.0" prefWidth="50" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="50" percentWidth="24.0" prefWidth="50" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="100" percentWidth="45.0" prefWidth="150" />
     </columnConstraints>
+    
+       <VBox GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="2">
+      <Label text="Tuition Details" styleClass="label-h2"   />
+     </VBox>
          
-        <Label text="Student ID:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="studentidTF"/>
-       <Label text="Type:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="typeTF"/>
-      <Label text="Credits:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="creditsTF"/>
-      <Label text="Scholarship:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="ScholarshipTF"/>
-      <Label text="Deduction:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="deductionTF"/>
+        <Label text="Student ID"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="studentidTF"/>
+       <Label text="Type"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="typeTF"/>
+      <Label text="Credits:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="creditsTF"/>
+      <Label text="Scholarship:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="ScholarshipTF"/>
+      <Label text="Deduction:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" fx:id="deductionTF"/>
        
    </GridPane>
     </VBox>
